name:                aoc2017
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aoc2017#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Callh
maintainer:          sebastian@callh.com
copyright:           2017 Sebastian Callh
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc2017
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                    
library
  hs-source-dirs:  src
  exposed-modules: Day1
                 , Day2
                 , Day3
                 , Day4
                 , Day5
                 , Day6
                 , Day7
                 , Day8
                 , Day9
                 , Day10
                 , Day11
                 , Day12
                 , Day13
                 , Day15
                 , Day16
                 , Day17
                 , Day18
  build-depends:   base >= 4.7 && < 5
                 , containers == 0.5.10.2
                 , megaparsec
                 , split
                 , vector
  default-language:    Haskell2010

  
